[package]
name = "koebot"
version = "0.1.0"
edition = "2021"


[dependencies]
serenity = { version = "0.11", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
] }


tokio = { version = "1", features = ["full"] }
url = "2"
tempfile = "3"
songbird = { version = "0.3.2", features = ["yt-dlp"] }
comfy-table = "4"
anyhow = "*"
uuid = "0.8"
log = "*"
env_logger = "*"
futures = "*"
