[package]
name = "koebot"
version = "0.1.0"
edition = "2021"


[dependencies]
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
] }

symphonia = { version = "0.5.2", features = ["all-formats"] }
tokio = { version = "1", features = ["full"] }
url = "2"
tempfile = "3"
songbird = { version = "0.4.6" }
comfy-table = "4"
anyhow = "*"
uuid = "1.13"
log = "*"
env_logger = "*"
futures = "*"
reqwest = { version = "0.11", features = ["json"] }
