[package]
name = "koebot"
version = "0.1.0"
edition = "2021"


[dependencies]
serenity = { version = "0.12.5", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
] }

symphonia = { version = "0.5.5", features = ["all-formats"] }
tokio = { version = "1.51", features = ["full"] }
url = "2.5"
tempfile = "3.27"
songbird = { version = "0.5" }
comfy-table = "7.2"
anyhow = "1.0"
uuid = "1.23"
log = "0.4"
env_logger = "0.11"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
